Netflix/styles/video.css
.video-section {
    position: relative;
    background-color: var(--color-black);
    margin-top: -40px;
    padding-bottom: 40px;
    z-index: 2;
    box-shadow: 0 -50px 60px var(--color-black);
}

.video-grid {
    position: relative;
    width: 100%;
    display: grid;
    grid-auto-flow: column;
    gap: 30px;
    margin: 8px 16px;
    overflow-x: auto;

    /* 추후 스크롤.. */
    scroll-behavior: smooth;
    scrollbar-width: none;
}

.video-grid::-webkit-scrollbar {
    display: none;
}

.video-section__title {
    margin-top: 20px;
    margin-left: 4px;
    font-size: 1rem;
    font-weight: 600;
    color: var(--color-white);
}

.video-grid__item {
    position: relative;
    overflow: hidden;
    cursor: pointer;
    transition: transform 0.25s;
}

.video-grid__item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.video-grid__item:hover {
    transform: scale(1.1);
}

